juntando o css ao resto do projeto

--- a/blasphemous.html
+++ b/blasphemous.html
@@ -53,5 +53,10 @@
             <p>e após mata-lo ele se depara com o milagre encarnado e após o milagre confessar seus planos malignos o penitente comete o ato máximo de blasfêmia e mata ele, após isso sem a culpa gerada pelo milagre a mea culpa some e por causa o penitente morre mas antes de morrer ele presencia o primeiro milagre feito pelo Deus dando assim início a um no gênesis</p>
         </section>
     </main>
+    <footer>
+        <p>Desenvolvido pela dupla de Alunos de INFOWEB 1: <br>
+            Arthur Ferrreira Dias de Farias / Heitor Mascena Bezerra
+        </p>
+    </footer>
 </body>
 </html>
