--- a/deadcells.html
+++ b/deadcells.html
@@ -20,5 +20,10 @@
     </header>
     <main>
     </main>
+    <footer>
+        <p>Desenvolvido pela dupla de Alunos de INFOWEB 1: <br>
+            Arthur Ferrreira Dias de Farias / Heitor Mascena Bezerra
+        </p>
+    </footer>
 </body>
 </html>
