--- a/hollowknight.html
+++ b/hollowknight.html
@@ -54,5 +54,10 @@
             <p>e com a ajuda da alma do seu irmão e de todos os outros milhares de irmãos que morreram no abismo eles matam a radiância e viram um com o abismo se sacrificando no processo.</p>
         </section>
     </main>
+    <footer>
+        <p>Desenvolvido pela dupla de Alunos de INFOWEB 1: <br>
+            Arthur Ferrreira Dias de Farias / Heitor Mascena Bezerra
+        </p>
+    </footer>
 </body>
 </html>
