parte de dead cells feita

--- a/deadcells.html
+++ b/deadcells.html
@@ -19,6 +19,47 @@
         </nav>
     </header>
     <main>
+        <section>
+            <figure>
+                <img width="800" src="imagens/dead cells logo.webp" alt="jogo dead cells">
+            </figure>
+            <figure>
+                <img width="400" src="imagens/dead cells ilha.webp" alt="ilha de dead cells">
+            </figure>
+            <p>A ilha ergue-se isolada, cercada por um mar eterno e indiferente. Não aparece em mapas, não recebe visitantes, e aqueles que um dia tentaram fugir jamais retornaram para contar a história. Suas muralhas ainda se mantêm de pé, não por força, mas por teimosia, como se o próprio reino se recusasse a aceitar sua queda. O vento carrega cinzas, gritos antigos e o cheiro da corrupção. Aqui, o tempo não passa — ele apodrece.</p>
+            <figure>
+                <img width="400" src="imagens/dead cells prisioneiro acorda.webp" alt="prisioneiro acorda">
+            </figure>
+            <p>No coração da ilha, abaixo das torres e salões outrora majestosos, existe uma cela simples e esquecida. É ali que o Prisioneiro desperta. Não há nome, não há rosto, não há passado claro. Apenas uma consciência aprisionada em uma massa disforme, moldada pela alquimia e pela morte. Cada despertar é igual ao anterior, como se o mundo reiniciasse ao seu redor. A cela não é um ponto de partida — é um lembrete de que não existe saída definitiva.</p>
+            <figure>
+                <img width="400" src="imagens/dead cells praga.jpg" alt="a praga">
+            </figure>
+            <p>A praga surgiu sem aviso. Uma doença que não apenas matava, mas transformava. Corpos se retorciam, ossos se quebravam e se recompunham em algo novo, algo errado. Os infectados perdiam a razão antes de perder a vida, tornando-se monstros que vagavam sem propósito além da violência. Médicos falharam. Sacerdotes se calaram. O medo tomou o lugar da esperança, e a ilha começou a se devorar por dentro.</p>
+            <figure>
+                <img width="400" src="imagens/dead cells rei.jpg" alt="o rei">
+            </figure>
+            <p>O rei observou tudo do alto de seu castelo, cercado por conselheiros e alquimistas. Recusando-se a aceitar a própria mortalidade, ele ordenou experiências proibidas, buscando uma cura a qualquer custo. Prisioneiros foram usados como cobaias, corpos empilhados em laboratórios ocultos, almas sacrificadas em nome do progresso. A praga não foi curada — foi refinada. E o preço foi a própria humanidade do reino.</p>
+            <figure>
+                <img width="400" src="imagens/dead cells prisioneiro no trono.webp" alt="prisioneiro no trono">
+            </figure>
+            <p>Dessas experiências nasceu algo novo. Um ser incapaz de morrer de verdade. O Prisioneiro não sangra como os outros, não sente dor como deveria, e retorna sempre após a morte. Cada corpo perdido é apenas uma casca descartável. A consciência, no entanto, permanece intacta, carregando fragmentos de memória que não deveriam existir. Ele não é um herói criado para salvar o mundo — é um erro que se recusa a desaparecer.</p>
+            <figure>
+                <img width="400" src="imagens/dead cells mao do rei.webp" alt="a mão do rei">
+            </figure>
+            <p>Espalhados pela ilha estão os Guardiões. Criaturas poderosas que impedem qualquer avanço sem luta. A Mão do Rei ainda protege um trono vazio. O Gigante guarda uma raiva antiga, alimentada pela traição. A Guardiã do Tempo manipula o fluxo dos acontecimentos, tentando, em vão, corrigir o inevitável. Cada um deles já foi humano, e cada um representa uma tentativa fracassada de controlar o caos.</p>
+            <figure>
+                <img width="400" src="imagens/dead cells gameplay.webp" alt="mundo reagindo">
+            </figure>
+            <p>Conforme o Prisioneiro avança, o mundo começa a reagir. Portas se fecham, caminhos mudam, e a própria ilha parece observar seus passos. Memórias emergem em pedaços: decisões erradas, promessas quebradas, uma coroa manchada de sangue. A verdade se revela lentamente — o Prisioneiro não está tentando consertar o desastre. Ele é parte essencial dele.</p>
+            <figure>
+                <img width="400" src="imagens/dead cells matando o boss.webp" alt="boss morto">
+            </figure>
+            <p>A imortalidade, que parecia uma dádiva, revela-se uma maldição cruel. Morrer deixa de ter significado quando não há descanso, quando não há fim. Cada retorno à cela inicial apaga conquistas, mas preserva o sofrimento. O ciclo se repete, não como punição divina, mas como consequência das escolhas do passado. A ilha vive porque não consegue morrer.</p>
+            <figure>
+                <img width="400" src="imagens/dead cells fim.jpg" alt="luta contra o boss">
+            </figure>
+            <p>No fim, não existe vitória clara. Derrotar o rei não salva o reino. Destruir a praga não liberta o Prisioneiro. Tudo o que resta é a pergunta silenciosa que ecoa entre as ruínas, a cada novo despertar, a cada nova fuga:</p>
+        </section>
     </main>
     <footer>
         <p>Desenvolvido pela dupla de Alunos de INFOWEB 1: <br>
