Estágio final do projeto

--- a/blasphemous.html
+++ b/blasphemous.html
@@ -26,31 +26,31 @@
             <figure>
                 <img width="400" src="imagens/blasphemous mea culpa.webp" alt="a espada mea culpa">
             </figure>
-            <p>A história de blasphemous começa quando somos apresentados a um mundo governado por um Deus chamado de O Milagre que faz suas bençãos por meio do sofrimento dos humanos e nesse contexto somos apresentados a uma mulher que um dia se sentiu tão mas tão culpado por pecar que se matou perfurando seu peito com um pedaço de metal e a culpa era tanta que após se matar o pedaço de metal virou uma espada chamada mea culpa que foi forjada pela própria culpa que tornou forma física</p>
+            <p>A história de blasphemous começa quando somos apresentados a um mundo governado por um Deus chamado de O Milagre que faz suas bençãos por meio do sofrimento dos humanos e nesse contexto somos apresentados a uma mulher que um dia se sentiu tão mas tão culpado por pecar que se matou perfurando seu peito com um pedaço de metal e a culpa era tanta que após se matar o pedaço de metal virou uma espada chamada mea culpa que foi forjada pela própria culpa que tornou forma física.</p>
             <figure>
                 <img width="400" src="imagens/blasphemous reviveu.jpg" alt="renascimento do penitente">
             </figure>
-            <p>anos depois o nosso protagonista chamado de o penitente que fazia parte de uma irmandade chamada de a irmandade da tristeza silenciosa que como forma de penitência para o milagre todos faziam uma promessa de silêncio para não usar as suas vozes, mas ao mando do padre escribar toda a irmandade foi morta incluindo o penitente, porém ele é salvo com a ajuda de sua amiga crisanta que dá ao penitente a mea culpa que inbuindo a sua própria culpa a espada ele revive agora com o objetivo de derrotar a igreja e matar o milagre</p>
+            <p>anos depois o nosso protagonista chamado de o penitente que fazia parte de uma irmandade chamada de a irmandade da tristeza silenciosa que como forma de penitência para o milagre todos faziam uma promessa de silêncio para não usar as suas vozes, mas ao mando do padre escribar toda a irmandade foi morta incluindo o penitente, porém ele é salvo com a ajuda de sua amiga crisanta que dá ao penitente a mea culpa que inbuindo a sua própria culpa a espada ele revive agora com o objetivo de derrotar a igreja e matar o milagre.</p>
             <figure>
                 <img width="400" src="imagens/blasphemous humilhacao.webp" alt="uma das humilhações">
             </figure>
-            <p>em sua jornada ele derrota crentes que estavam cegos pelo milagre e não viam que aquela entidade era maléfica e se aproveitava do sofrimento da humanidade, ao longo das jornadas o penitente se encontra com as 3 humilhações que são seres que sabem a verdade sobre o milagre e ajudam ele a atingir os céus</p>
+            <p>em sua jornada ele derrota crentes que estavam cegos pelo milagre e não viam que aquela entidade era maléfica e se aproveitava do sofrimento da humanidade, ao longo das jornadas o penitente se encontra com as 3 humilhações que são seres que sabem a verdade sobre o milagre e ajudam ele a atingir os céus.</p>
             <figure>
                 <img width="400" src="imagens/blasphemous quarta humilhacao.avif" alt="a quarta humilhação">
             </figure>
-            <p>mas antes disso ele descobre que na verdade existe uma quarta humilhação e ela foi a única que chegou a ver a verdadeira face do milagre e ela dá ao penitente um artefato que ela diz que será útil</p>
+            <p>mas antes disso ele descobre que na verdade existe uma quarta humilhação e ela foi a única que chegou a ver a verdadeira face do milagre e ela dá ao penitente um artefato que ela diz que será útil.</p>
             <figure>
                 <img width="400" src="imagens/escribar forma normal.jpg" alt="luta contra o escribar no céu">
             </figure>
-            <p>depois disso no fim da sua jornada de expiação penitente se encontra com o padre escribar que se revela ser o primeiro filho do milagre e quer matar o penitente para que o milagre possa continuar se aproveitando da humanidade, ambos sobem aos céus para lutar e o penitente ganha</p>
+            <p>depois disso no fim da sua jornada de expiação penitente se encontra com o padre escribar que se revela ser o primeiro filho do milagre e quer matar o penitente para que o milagre possa continuar se aproveitando da humanidade, ambos sobem aos céus para lutar e o penitente ganha.</p>
             <figure>
                 <img width="400" src="imagens/escribar forma verdadeira.jpg" alt="luta contra o escribar no berço das lamentações">
             </figure>
-            <p>mas utilizando o artefato da quarta humilhação descobre que escribar não está verdadeiramente morto e então ele sobe ainda mais alto no céu e chega no berço da aflição que é aonde vive o milagre, lá ele se encontra com escribar na sua forma final e é capaz de mata-lo de uma vez por todas</p>
+            <p>mas utilizando o artefato da quarta humilhação descobre que escribar não está verdadeiramente morto e então ele sobe ainda mais alto no céu e chega no berço da aflição que é aonde vive o milagre, lá ele se encontra com escribar na sua forma final e é capaz de mata-lo de uma vez por todas.</p>
             <figure>
                 <img width="400" src="imagens/blasphemous fim.webp" alt="morte do milagre">
             </figure>
-            <p>e após mata-lo ele se depara com o milagre encarnado e após o milagre confessar seus planos malignos o penitente comete o ato máximo de blasfêmia e mata ele, após isso sem a culpa gerada pelo milagre a mea culpa some e por causa o penitente morre mas antes de morrer ele presencia o primeiro milagre feito pelo Deus dando assim início a um no gênesis</p>
+            <p>e após mata-lo ele se depara com o milagre encarnado e após o milagre confessar seus planos malignos o penitente comete o ato máximo de blasfêmia e mata ele, após isso sem a culpa gerada pelo milagre a mea culpa some e por causa o penitente morre mas antes de morrer ele presencia o primeiro milagre feito pelo Deus dando assim início a um novo gênesis.</p>
         </section>
     </main>
     <footer>
