--- a/deadcells.html
+++ b/deadcells.html
@@ -58,7 +58,7 @@
             <figure>
                 <img width="400" src="imagens/dead cells fim.jpg" alt="luta contra o boss">
             </figure>
-            <p>No fim, não existe vitória clara. Derrotar o rei não salva o reino. Destruir a praga não liberta o Prisioneiro. Tudo o que resta é a pergunta silenciosa que ecoa entre as ruínas, a cada novo despertar, a cada nova fuga:</p>
+            <p>No fim, não existe vitória clara. Derrotar o rei não salva o reino. Destruir a praga não liberta o Prisioneiro. Tudo o que resta é a pergunta silenciosa que ecoa entre as ruínas, a cada novo despertar, a cada nova fuga.</p>
         </section>
     </main>
     <footer>
