--- a/index.html
+++ b/index.html
@@ -29,6 +29,36 @@
             <p>Um jogo metroidvania é um gênero de jogo de plataforma 2D que combina elementos de ação e aventura, com ênfase na exploração. Os jogadores começam com habilidades limitadas e, à medida que avançam, desbloqueiam novas capacidades que permitem acessar áreas previamente inacessíveis. O termo "metroidvania" é uma fusão dos jogos "Metroid" e "Castlevania", que definiram esse estilo e inspiraram muitos outros jogos. 
                 Esses jogos apresentam um mundo expansivo e interligado, onde a progressão é clara e os jogadores são incentivados a explorar.</p>
         </section>
+        <section>
+            <table>
+                <tr>
+        
+                    <th>Nome do jogo</th>
+                    <th>Ano de lançamento</th>
+                    <th>Produtora</th>
+                    <th>Estilo</th>
+        
+                </tr>
+                <tr>
+                    <td>Hollow Knight</td>
+                    <td>2017</td>
+                    <td><a href="https://hollowknight.fandom.com/pt/wiki/Team_Cherry">Team Cherry</a></td>
+                    <td>Reino dos insetos humanóides</td>
+                </tr>
+                <tr>
+                    <td>Dead Cells</td>
+                    <td>2018</td>
+                    <td><a href="https://en.wikipedia.org/wiki/Motion_Twin">Motion Twin</a></td>
+                    <td>Reino fantasioso assolado por uma praga</td>
+                </tr>
+                <tr>
+                    <td>Blasphemous</td>
+                    <td>2019</td>
+                    <td><a href="https://thegamekitchen.com/">The Game Kitchen</a></td>
+                    <td>Reino medieval extremamente religioso</td>
+                </tr>
+            </table>
+        </section>
     </main>
     <footer>
         <p>Desenvolvido pela dupla de Alunos de INFOWEB 1: <br>
