--- a/log.html
+++ b/log.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogos e suas Lores</title>
+    <title>Login</title>
     <link rel="stylesheet" href="log.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
             <form action="index.html">
 
                 <label for="login">Login/E-mail:</label>
-                <input type="email" id="login" > <br>
+                <input type="email" id="login" required> <br>
     
                 <label for="senha">Senha:</label>
                 <input type="password" id="senha"> <br>
