--- a/blasphemous.html
+++ b/blasphemous.html
@@ -19,10 +19,11 @@
         </nav>
     </header>
     <main>
+        <h2>Blasphemous</h2>
+        <figure>
+            <img width="800" src="imagens/blasphemous blasphemous.jpeg" alt="jogo blasphemous">
+        </figure>
         <section>
-            <figure>
-                <img width="800" src="imagens/blasphemous blasphemous.jpeg" alt="jogo blasphemous">
-            </figure>
             <figure>
                 <img width="400" src="imagens/blasphemous mea culpa.webp" alt="a espada mea culpa">
             </figure>
