--- a/deadcells.html
+++ b/deadcells.html
@@ -19,10 +19,11 @@
         </nav>
     </header>
     <main>
+        <h2>Dead Cells</h2>
+        <figure>
+            <img width="800" src="imagens/dead cells logo.webp" alt="jogo dead cells">
+        </figure>
         <section>
-            <figure>
-                <img width="800" src="imagens/dead cells logo.webp" alt="jogo dead cells">
-            </figure>
             <figure>
                 <img width="400" src="imagens/dead cells ilha.webp" alt="ilha de dead cells">
             </figure>
